Add /version endpoint
