# runner/app/main.py
@@ -2,7 +2,7 @@ import logging
 import os
 from contextlib import asynccontextmanager
 
-from app.routes import health, hardware
+from app.routes import health, hardware, version
 from fastapi import FastAPI
 from fastapi.routing import APIRoute
 from app.utils.hardware import HardwareInfo
@@ -22,6 +22,7 @@ async def lifespan(app: FastAPI):
 
     app.include_router(health.router)
     app.include_router(hardware.router)
+    app.include_router(version.router)
 
     pipeline = os.environ["PIPELINE"]
     model_id = os.environ["MODEL_ID"]
